Corrected CMakeLists and added README

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -112,5 +112,5 @@ endif()
 if(WIN32)
 	target_link_libraries(TringleApp PRIVATE ${OPENGL_gl_LIBRARY})
 	target_link_libraries(TringleApp PRIVATE ${GLFW3_LIBRARY})
-	target_link_libraries(TringleApp assimp ${ASSIMP_LIBRARY})
+	target_link_libraries(TringleApp PRIVATE ${ASSIMP_LIBRARY})
 endif()
